added stars with average star rating

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,12 +5,17 @@
       <p>
         <%= @restaurant.address %><br>
         <%= @restaurant.phone_number %>
+
       </p>
     </div>
     <h5>User Review</h5>
-  <p>
+  <% @average = Review.where(:restaurant_id => @restaurant.id).average(:rating)  %>
+  <p> Avg Stars: <%= '*' * @average.to_i   %>
+
+
+  </p>
   <% @restaurant.reviews.each do  |review| %>
-   <%= review.content %> --- Rating <%= review.rating %><br>
+   <%= review.content %> --- Stars <%= '*' *review.rating %><br>
    <% end %>
   </p>
 
