--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,24 +1,33 @@
+<% content_for(:title) do %>
+<%= @restaurant.name %> is on yelp
+<% end %>
 <div class="container text-center">
-      <div class="row">
-      <h1><%= @restaurant.name %></h1>
-      <h4><%= @restaurant.category %></h4>
-      <p>
-        <%= @restaurant.address %><br>
-        <%= @restaurant.phone_number %>
-
-      </p>
-    </div>
-    <h5>User Review</h5>
-
-  <p> Avg Stars: <%= average.to_i   %>
-
-
-  </p>
-  <% @restaurant.reviews.each do  |review| %>
-   <%= review.content %> --- Stars <%= '*' *review.rating %><br>
-   <% end %>
-  </p>
-
-  <%= link_to "Rating", new_restaurant_review_path(@restaurant), :class => "btn btn-primary" %><i class="fas fa-search"></i>
-
+  <div class="row">
+    <div class="text-center">
+      <%= link_to restaurants_path do %>
+        <span class="fas fa-home">
+        <p>Home</p>
+        </span>
+      <% end %>
+    <%= link_to new_restaurant_review_path(@restaurant) do %>
+    <span class="fas fa-plus">
+      <p>Add a rating</p>
+    </span>
+    <% end %>
+  </div>
+   <h1><%= @restaurant.name %></h1>
+    <h4>Food type: <%= @restaurant.category %></h4>
+    <p>
+      Address: <%= @restaurant.address %><br>
+      Telephone: <%= @restaurant.phone_number %>
+    </p>
+  </div>
+</div>
+  <div class="container text-center">
+    <h5>User Reviews</h5>
+      <% @restaurant.reviews.each do  |review| %>
+      <%= review.content %> --- Stars <%= '*' *review.rating %><br>
+      <% end %>
+    </p>
+  </div>
 </div>
