--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,7 @@
 // Your CSS partials
 @import "layouts/index";
 @import "components/index";
+@import "components/button";
 @import "pages/index";
+@import "restaurants";
+@import "reviews";
